k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flight-predictor
  labels:
    name: flight-predictor
    app: flight-delay-predictor
